<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rides">

    <fragment
        android:id="@+id/navigation_rides"
        android:name="com.example.riderun.ui.rides.RidesFragment"
        android:label="@string/title_rides"
        tools:layout="@layout/fragment_rides" />

    <fragment
        android:id="@+id/navigation_parks"
        android:name="com.example.riderun.ui.parks.ParksFragment"
        android:label="@string/title_parks"
        tools:layout="@layout/fragment_parks" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.riderun.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>