<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.riderun.app.ui.parks.ParksFragment">

    <TextView
        android:id="@+id/text_parks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="@string/parks_nearby_preselect" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parks_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parks_all_preselect" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parks_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parks_nearby_preselect" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parklocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parks_location_preselect" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parks_tour_preselect" />

    </com.google.android.material.chip.ChipGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parks_filter_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parks_filter_help" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/parks_name_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:contentDescription="Park name filter"
        android:ems="10"
        android:inputType="textFilter" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</LinearLayout>